feat: change configs and delete demo posts

--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
+  heading: "Just Record Perfect Moment"
+  subheading: "Every moment is valuable"
   banner: "Your image url"
